Bug 111306 - EDITING: The master slide loses the background when changing page format of orientation using the sidebar
Summary: EDITING: The master slide loses the background when changing page format of o...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.3 all versions
Hardware: All All
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0 target:6.1.1
Keywords: bibisected, bisected
: 111701 117357 118071 118595 (view as bug list)
Depends on:
Blocks: Sidebar-Properties-Slide Master-Slide
  Show dependency treegraph
 
Reported: 2017-08-03 10:36 UTC by Telesto
Modified: 2018-09-23 09:42 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2017-08-03 10:36:04 UTC
Description:
The master slide loses the background when changing page format of orientation

Steps to Reproduce:
1. Open Impress
2. View -> Slide Master
3. Select a background in the sidebar
4. Change the orientation to Portrait

Actual Results:  
The background setting will be undone

Expected Results:
Shouldn't happen


Reproducible: Always

User Profile Reset: No

Additional Info:
Version: 6.0.0.0.alpha0+
Build ID: 18f80da7a689ab962735c0f657497b8f1ed4d606
CPU threads: 4; OS: Windows 6.19; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-07-28_05:15:48
Locale: nl-NL (nl_NL); Calc: CL


User-Agent: Mozilla/5.0 (Windows NT 6.2; WOW64; rv:52.0) Gecko/20100101 Firefox/52.0
Comment 1 Buovjaga 2017-08-22 15:54:18 UTC
Repro.

Note: only through sidebar. Right-click, slide properties, step by step works fine.

Arch Linux 64-bit, KDE Plasma 5
Version: 6.0.0.0.alpha0+
Build ID: 668ab2e739397e6b095372a1a468bd4f515927b6
CPU threads: 8; OS: Linux 4.12; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on August 20th 2017
Comment 2 Xisco Faulí 2018-05-03 11:45:31 UTC
Also reproduced in

Version: 5.3.0.0.alpha1+
Build ID: 4136757b4e51c4e6f7cb4132c95538a7f831ef2c
CPU Threads: 4; OS Version: Linux 4.13; UI Render: default; VCL: gtk3; Layout Engine: new; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 3 Xisco Faulí 2018-05-03 11:45:52 UTC
*** Bug 111701 has been marked as a duplicate of this bug. ***
Comment 4 Xisco Faulí 2018-05-03 11:46:05 UTC
*** Bug 117357 has been marked as a duplicate of this bug. ***
Comment 5 muso 2018-05-06 15:52:21 UTC
The bug is still in LO 6.0.4RC1
Comment 6 Xisco Faulí 2018-07-09 13:41:01 UTC
*** Bug 118595 has been marked as a duplicate of this bug. ***
Comment 7 Xisco Faulí 2018-07-13 16:25:49 UTC
*** Bug 118071 has been marked as a duplicate of this bug. ***
Comment 8 Xisco Faulí 2018-07-13 16:37:59 UTC
The feature was implemented in https://cgit.freedesktop.org/libreoffice/core/commit/?id=64ff7453408e578b95073db1740bfef4f500a2e4
Comment 9 Regina Henschel 2018-07-13 18:39:35 UTC
The part "Slide" of the properties panel of the sidebar was disabled for Master pages in LO 5.2.6. I see it enabled in version 5.3.7.2. And in that version I see the problem, that the setting of the background is not stored. You need not save and reload. You see the loss already, if you have closed Master view and then add a new slide. So it is likely not connected to changing the slide size or orientation.

I see the problem not only with bitmap, but with all kind of background fillings.
Comment 10 Xisco Faulí 2018-07-14 15:53:05 UTC
The code related to the slide properties dialog is in https://opengrok.libreoffice.org/xref/core/sd/source/ui/func/fupage.cxx#389.
As observed, it uses mbMasterPage to differentiate between masterpages and not masterpages... we should do the same in https://opengrok.libreoffice.org/xref/core/sd/source/ui/sidebar/SlideBackground.cxx
Comment 11 Xisco Faulí 2018-07-14 17:03:58 UTC
Works well when inserting an image...
Comment 12 Xisco Faulí 2018-07-14 18:46:47 UTC
I've tried to fix this issue but my knowledge is really limited here. For the time being, let hide the background widget: https://gerrit.libreoffice.org/#/c/57440/
Comment 13 Commit Notification 2018-07-27 11:09:50 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c57f10b67fceef47d304d74dce93be7389a7720c

tdf#111306: Hide background widget in sidebar in master and notes view

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 sk.griffinix 2018-07-27 11:19:17 UTC
(In reply to Commit Notification from comment #13)
> Xisco Fauli committed a patch related to this issue.
> It has been pushed to "master":
> 
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=c57f10b67fceef47d304d74dce93be7389a7720c
> 
> tdf#111306: Hide background widget in sidebar in master and notes view
> 
> It will be available in 6.2.0.
> 
> The patch should be included in the daily builds available at
> http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
> information about daily builds can be found at:
> http://wiki.documentfoundation.org/Testing_Daily_Builds
> 
> Affected users are encouraged to test the fix and report feedback.

Removing the background option actually seems to be a regression rather than fix. The background option in sidebar was to improve ease of use. If removing it can be justified by existence of a duplicate option in a menu, it can be further extended to say that the entire sidebar be removed as most options there can be accessed by alternate methods. If this option is once removed, i dont think anyone will actually implement a working background widget in the sidebar in the near future
Comment 15 Xisco Faulí 2018-07-27 11:29:32 UTC
> Removing the background option actually seems to be a regression rather than
> fix. The background option in sidebar was to improve ease of use. If
> removing it can be justified by existence of a duplicate option in a menu,
> it can be further extended to say that the entire sidebar be removed as most
> options there can be accessed by alternate methods. If this option is once
> removed, i dont think anyone will actually implement a working background
> widget in the sidebar in the near future

What the point of showing it in the sidebar if it doesnt work?
The issues has been there for three majors releases and no one has fixed it yet...
 besides, there are already 4 duplicates... thus, IMHO, it's better to hide it for now than showing it while it doesn't work... it might create confusion among users when they save their documents as the background will get lost...
Please note this fix should be temporal, and the root cause should be fixed at some point, then we can show the option in the sidebar again...
Comment 16 sk.griffinix 2018-07-27 11:33:11 UTC
(In reply to Xisco Faulí from comment #1)
> What the point of showing it in the sidebar if it doesnt work?
> The issues has been there for three majors releases and no one has fixed it
> yet...
>  besides, there are already 4 duplicates... thus, IMHO, it's better to hide
> it for now than showing it while it doesn't work... it might create
> confusion among users when they save their documents as the background will
> get lost...
> Please note this fix should be temporal, and the root cause should be fixed
> at some point, then we can show the option in the sidebar again...

will it be marked resolved after this temporary fix?
Comment 17 Xisco Faulí 2018-07-27 11:35:10 UTC
> will it be marked resolved after this temporary fix?

We can do two things here:
1. we close this one and we create a follow-up bug describing the root bug...
2. We don't close this one and we change the description accordingly.

Personally, I prefer the first option and it's clearer...
Comment 18 sk.griffinix 2018-07-27 12:03:04 UTC
(In reply to Xisco Faulí from comment #17)
> > will it be marked resolved after this temporary fix?
> 
> We can do two things here:
> 1. we close this one and we create a follow-up bug describing the root bug...
> 2. We don't close this one and we change the description accordingly.
> 
> Personally, I prefer the first option and it's clearer...

Option 1 appears better
Comment 19 Commit Notification 2018-08-13 09:24:49 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=955eb9d196bdb626f876f02b3961aac79cce3849&h=libreoffice-6-1

tdf#111306: Hide background widget in sidebar in master and notes view

It will be available in 6.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 BogdanB 2018-08-16 17:52:43 UTC
It works.
Tested with Version: 6.1.1.0.0+
Build ID: 5a56b72413d5f555c854e36d3bd2fd50ec21644c
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:libreoffice-6-1, Time: 2018-08-15_02:45:13
Locale: ro-RO (ro_RO.UTF-8); Calc: group threaded
Comment 21 Xisco Faulí 2018-09-04 12:20:21 UTC
Follow-up bug created: bug 119691