tdf#111306: Hide background widget in sidebar in master and notes view

Background is lost if it's changed from the sidebar in master or
notes view, thus hide the widget for now, until the real issue is fixed.

Keep the insert image button visible as it works.

The background can be changed from the page properties dialog

Change-Id: Ic3f6116cb0997024096343cb20ec40ac07307918
Reviewed-on: https://gerrit.libreoffice.org/57440
Tested-by: Jenkins
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>
(cherry picked from commit c57f10b67fceef47d304d74dce93be7389a7720c)