sd/source/ui/sidebar/SlideBackground.cxx
@@ -243,11 +243,11 @@ void SlideBackground::HandleContextChange(
             mpMasterSlide->Disable();
             mpDspMasterBackground->Disable();
             mpDspMasterObjects->Disable();
-            mpFillStyle->Show();
-            mpBackgroundLabel->Show();
+            mpFillStyle->Hide();
+            mpBackgroundLabel->Hide();
             mpInsertImage->Show();
         }
-        else if ( maContext == maImpressHandoutContext )
+        else if ( maContext == maImpressHandoutContext  || maContext == maImpressNotesContext )
         {
             mpCloseMaster->Hide();
             mpEditMaster->Hide();
@@ -269,17 +269,7 @@ void SlideBackground::HandleContextChange(
             mpBackgroundLabel->Show();
             mpInsertImage->Show();
         }
-        else if (maContext == maImpressNotesContext)
-        {
-            mpCloseMaster->Hide();
-            mpEditMaster->Hide();
-            mpMasterSlide->Disable();
-            mpDspMasterBackground->Disable();
-            mpDspMasterObjects->Disable();
-            mpFillStyle->Show();
-            mpBackgroundLabel->Show();
-            mpInsertImage->Hide();
-        }
+
         // Need to do a relayouting, otherwise the panel size is not updated after show / hide controls
         sfx2::sidebar::Panel* pPanel = dynamic_cast<sfx2::sidebar::Panel*>(GetParent());
         if(pPanel)
@@ -295,7 +285,7 @@ void SlideBackground::Update()
 {
     eFillStyle nPos = static_cast<eFillStyle>(mpFillStyle->GetSelectedEntryPos());
 
-    if(maContext == maImpressHandoutContext)
+    if(maContext != maImpressOtherContext)
         nPos = NONE;
 
     SfxObjectShell* pSh = SfxObjectShell::Current();
